--- a/skeletons/autodownload/Makefile.win
+++ b/skeletons/autodownload/Makefile.win
@@ -13,8 +13,8 @@ MINGW =
 RES  = JWrap_private.res
 LINKOBJ  = main.o execcab.o execexe.o $(RES)
 OBJ  = main.o execcab.o execexe.o $(libmscabd_la_OBJS) $(RES)
-FLTK-LDFLAGS = $(shell fltk-config --ldflags)
-FLTK-CXXFLAGS = $(shell fltk-config --cxxflags)
+FLTK-LDFLAGS = $(shell fltk-config --ldflags --use-images)
+FLTK-CXXFLAGS = $(shell fltk-config --cxxflags --use-images)
 ##LINKLIBS = ../commonjava/CommonJava.a ../util-core/util-core.a mspack.a ../util-net/util-net.a
 LINKLIBS = ../commonjava/CommonJava.a ../util-net/util-net.a ../util-core/util-core.a 
 LIBS =  -L. -L"$(MINGW)/lib"  -L"/lib" -lws2_32 -L"/lib" -L"../commonjava" -mwindows -L"../util-core" -L"../util-net" $(LINKLIBS) $(FLTK-LDFLAGS) -lsetupapi
