--- a/skeletons/util-net/Makefile.win
+++ b/skeletons/util-net/Makefile.win
@@ -9,8 +9,8 @@ MINGW = "c:/MinGW"
 FLTK-LDFLAGS = $(shell fltk-config --ldflags)
 FLTK-CXXFLAGS = $(shell fltk-config --cxxflags)
 RES  = 
-OBJ  = HttpClient.o URL.o downloadgui.o httpdownload.o $(RES)
-LIBS =  -L"$(MINGW)/lib"  -L"/lib" -lws2_32 $(FLTK-LDFLAGS)
+OBJ  = WinHttpClient.o HttpClient.o URL.o downloadgui.o httpdownload.o $(RES)
+LIBS =  -L"$(MINGW)/lib"  -L"/lib" -lws2_32 -lwininet $(FLTK-LDFLAGS)
 CXXINCS = -Os -I"../util-core" -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32"  $(FLTK-CXXFLAGS)
 BIN  = $(PROJECTNAME).a
 CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
