--- a/skeletons/samplejar/build.xml
+++ b/skeletons/samplejar/build.xml
@@ -5,6 +5,10 @@
   <property name="src" value="src"/>
   <property name="classes" value="classes"/>
 
+  <path id="build.class.path">
+    <pathelement path="../jnismooth/jnismooth.jar"/>
+  </path>
+
   <target name="init">
     <!-- Create the time stamp -->
     <tstamp/>
@@ -14,7 +18,9 @@
 
   <target depends="init" name="compile">
     <!-- Compile the java code from ${src} into ${classes} -->
-    <javac debug="true" deprecation="yes" destdir="${classes}" srcdir="${src}"/>
+    <javac debug="true" deprecation="yes" destdir="${classes}" srcdir="${src}">
+       <classpath refid="build.class.path"/>
+    </javac>
   </target>
 
   <target depends="compile" name="dist">
