--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -1,7 +1,7 @@
 # Project: JWrap
 # Makefile created by Dev-C++ 4.9.8.0
 
-RM   = CMD /C DEL
+RM   = rm -f 
 CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
@@ -10,7 +10,7 @@ OBJ  = main.o $(RES)
 LINKOBJ  = main.o $(RES)
 LIBS =  -L"/lib" -L"../commonjava"  -L"../util-core" -mwindows ../commonjava/CommonJava.a ../util-core/util-core.a
 INCS =  -I"/include"  -I"$(JDK)/include/win32"  -I"$(JDK)/include"  -I"../commonjava" -I"../util-core"
-CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"$(JDK)/include/win32"  -I"$(JDK)/include"  -I"../commonjava"  -I../util-core
+CXXINCS = -g -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"$(JDK)/include/win32"  -I"$(JDK)/include"  -I"../commonjava"  -I../util-core
 BIN  = JWrap.exe
 CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
@@ -21,7 +21,7 @@ all: all-before JWrap.exe all-after
 
 
 clean: clean-custom
-	$(RM) $(OBJ) $(BIN)
+	$(RM) $(OBJ) $(BIN) JWrap_private.res
 
 $(BIN): $(LINKOBJ) ../commonjava/CommonJava.a
 	$(CPP) $(LINKOBJ) -o "JWrap.exe" $(LIBS)
