--- a/skeletons/autodownload/mainres.rc
+++ b/skeletons/autodownload/mainres.rc
@@ -3,6 +3,7 @@
 
 JARID JAVA "../samplejar/sample.jar"
 PROPID JAVA "../samplejar/sample.props"
+JNISMOOTHID JAVA "../jnismooth/jnismooth.jar"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
 
