--- a/skeletons/consolewrapper/Makefile.win
+++ b/skeletons/consolewrapper/Makefile.win
@@ -1,7 +1,7 @@
 # Project: ConsoleWrapper
 # Makefile created by Dev-C++ 4.9.8.0
 
-RM   = cmd /C DEL
+RM   = rm -f
 CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
@@ -20,7 +20,7 @@ CFLAGS = $(INCS)
 all: all-before ConsoleWrapper.exe all-after
 
 clean: clean-custom
-	$(RM) $(OBJ) $(BIN)
+	$(RM) $(OBJ) $(BIN) ConsoleWrapper_private.res
 
 $(BIN): $(LINKOBJ)  ../commonjava/CommonJava.a
 	$(CPP) $(LINKOBJ) -o "ConsoleWrapper.exe" $(LIBS)
