--- a/skeletons/winservice/mainres.rc
+++ b/skeletons/winservice/mainres.rc
@@ -3,6 +3,7 @@
 
 JARID JAVA "sample/sample.jar"
 PROPID JAVA "sample/sample.props"
+JNISMOOTHID JAVA "../jnismooth/jnismooth.jar"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
 
