--- a/sample/build.xml
+++ b/sample/build.xml
@@ -5,6 +5,10 @@
   <property name="src" value="src"/>
   <property name="classes" value="classes"/>
 
+  <path id="build.class.path">
+    <pathelement path="../skeletons/jnismooth/jnismooth.jar"/>
+  </path>
+
   <target name="init">
     <!-- Create the time stamp -->
     <tstamp/>
@@ -14,13 +18,24 @@
 
   <target depends="init" name="compile">
     <!-- Compile the java code from ${src} into ${classes} -->
-    <javac deprecation="yes" destdir="${classes}" srcdir="${src}" source="1.1" target="1.1"/>
+    <javac deprecation="yes" destdir="${classes}" srcdir="${src}" source="1.1" target="1.1">
+       <classpath refid="build.class.path"/>
+    </javac>
   </target>
 
   <target depends="compile" name="dist">
     <!-- Compile the java code from ${src} into ${classes} -->
     <jar basedir="classes" jarfile="sample.jar" manifest="src\MANIFEST.txt"/>    
     </target>
+
+  <target name="run" depends="dist">
+     <java classname="JSmoothPropertiesDisplayer" fork="yes" >
+       <classpath refid="build.class.path"/>
+       <classpath>
+          <pathelement path="sample.jar"/>
+       </classpath>
+     </java>
+  </target>
 
   <target name="clean">
     <delete dir="${classes}"/>
