--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
     <pathelement path="lib/JimiProClasses.zip"/>
     <pathelement path="lib/jox116.jar"/>
     <pathelement path="lib/dtdparser113.jar"/>
+    <pathelement path="skeletons/jnismooth/jnismooth.jar"/>
   </path>
 
   <path id="anttask.class.path">
@@ -78,6 +79,7 @@
 
   <target depends="init" name="compile">
     <!-- Compile the java code from ${src} into ${classes} -->
+    <ant antfile="build.xml" dir="skeletons/jnismooth/" target="dist"/>
     <echo>Compiling the application from ${src}</echo>
     <javac target="1.4" source="1.4" deprecation="yes" destdir="${classes}" srcdir="${src}" debug="true">
        <classpath refid="jsmooth.class.path"/>
