splash screen support and small overall refactoring

--- a/skeletons/autodownload/Makefile.win
+++ b/skeletons/autodownload/Makefile.win
@@ -13,13 +13,13 @@ MINGW =
 RES  = JWrap_private.res
 LINKOBJ  = main.o execcab.o execexe.o $(RES)
 OBJ  = main.o execcab.o execexe.o $(libmscabd_la_OBJS) $(RES)
-FLTK-LDFLAGS = $(shell fltk-config --ldflags --use-images)
-FLTK-CXXFLAGS = $(shell fltk-config --cxxflags --use-images)
+FLTK-LDFLAGS = $(shell fltk-config  --use-images --ldflags )
+FLTK-CXXFLAGS = $(shell fltk-config --use-images --cxxflags )
 ##LINKLIBS = ../commonjava/CommonJava.a ../util-core/util-core.a mspack.a ../util-net/util-net.a
-LINKLIBS = ../commonjava/CommonJava.a ../util-net/util-net.a ../util-core/util-core.a 
-LIBS =  -L. -L"$(MINGW)/lib"  -L"/lib" -lws2_32 -L"/lib" -L"../commonjava" -mwindows -L"../util-core" -L"../util-net" $(LINKLIBS) $(FLTK-LDFLAGS) -lsetupapi -lwininet
+LINKLIBS = ../commonjava/CommonJava.a ../util-net/util-net.a ../util-gui/util-gui.a ../util-core/util-core.a  ../jnismooth/jnismooth.a ../util-gui/util-gui.a  
+LIBS =  -L. -L"$(MINGW)/lib"  -L"/lib" -lws2_32 -L"/lib" -L"../commonjava" -mwindows -L"../util-core" -L"../util-net" -L"../util-gui" $(LINKLIBS)  -lsetupapi -lwininet $(FLTK-LDFLAGS)  -lfltk_images -lfltk_png -lfltk_z -lfltk_jpeg
 INCS =  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
-CXXINCS =  -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" -I"../commonjava" -I"../util-core" -I"../util-net" $(FLTK-CXXFLAGS)
+CXXINCS =  -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" -I"../commonjava" -I"../util-core" -I"../util-net" -I"../util-gui" -I"../jnismooth"  $(FLTK-CXXFLAGS) 
 BIN  = autodownload.exe
 CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
