--- a/skeletons/winservice/Makefile.win
+++ b/skeletons/winservice/Makefile.win
@@ -8,10 +8,12 @@ CC   = gcc.exe
 WINDRES = windres.exe
 RES  = winservice_private.res
 OBJ  = main.o $(RES)
+FLTK-LDFLAGS = $(shell fltk-config  --use-images --ldflags )
+FLTK-CXXFLAGS = $(shell fltk-config --use-images --cxxflags )
 LINKOBJ  = WinService.o main.o $(RES)
-LIBS =  -L"/lib" -L"../commonjava" -L"../util-core" ../commonjava/CommonJava.a ../util-core/util-core.a 
+LIBS =  -L"/lib" -L"../commonjava" -L"../util-core" ../commonjava/CommonJava.a ../util-core/util-core.a ../jnismooth/jnismooth.a ../util-gui/util-gui.a $(FLTK-LDFLAGS)  -lfltk_images  -lfltk_png -lfltk_z -lfltk_jpeg
 INCS =  -I"/include" -I"../util-core"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
-CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32"   -I../util-core
+CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32"   -I../util-core -I../jnismooth
 BIN  = winservice.exe
 CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
