--- a/skeletons/autodownload/mainres.rc
+++ b/skeletons/autodownload/mainres.rc
@@ -6,4 +6,4 @@ PROPID JAVA "../samplejar/sample.props"
 JNISMOOTHID JAVA "../jnismooth/jnismooth.jar"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
-
+1 MANIFEST "../samplejar/sample.manifest"
