--- a/skeletons/simplewrap/mainres.rc
+++ b/skeletons/simplewrap/mainres.rc
@@ -5,4 +5,4 @@ PROPID JAVA "../samplejar/sample.props"
 JNISMOOTHID JAVA "../jnismooth/jnismooth.jar"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
-
+1 MANIFEST "../samplejar/sample.manifest"
