--- a/skeletons/winservice/mainres.rc
+++ b/skeletons/winservice/mainres.rc
@@ -1,9 +1,9 @@
 
 #include "resource.h"
 
-JARID JAVA "sample/sample.jar"
-PROPID JAVA "sample/sample.props"
+JARID JAVA "../samplejar/sample.jar"
+PROPID JAVA "../samplejar/sample.props"
 JNISMOOTHID JAVA "../jnismooth/jnismooth.jar"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
-
+1 MANIFEST "../samplejar/sample.manifest"
