--- a/skeletons/jnismooth/build.xml
+++ b/skeletons/jnismooth/build.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="dist" name="jsmooth-sample">
-
-  <!-- set global properties for this build -->
-  <property name="src" value="src"/>
-  <property name="classes" value="classes"/>
-
   <target name="init">
     <!-- Create the time stamp -->
     <tstamp/>
     <!-- Create the build directory structure used by compile -->
-    <mkdir dir="${classes}"/>
+    <mkdir dir="classes"/>
   </target>
 
   <target depends="init" name="compile">
-    <!-- Compile the java code from ${src} into ${classes} -->
-    <javac debug="true" deprecation="yes" destdir="${classes}" srcdir="${src}"/>
+    <!-- Compile the java code from src into classes -->
+    <javac debug="true" deprecation="yes" destdir="classes" srcdir="src"/>
   </target>
 
   <target depends="compile" name="dist">
-    <!-- Compile the java code from ${src} into ${classes} -->
+    <!-- Compile the java code from src into classes -->
     <jar jarfile="jnismooth.jar" basedir="classes"/>    
   </target>
 
   <target depends="dist" name="run">
-    <!-- Compile the java code from ${src} into ${classes} -->
+    <!-- Compile the java code from src into classes -->
      <java classname="AlertServer" fork="yes" >
       <classpath>
           <pathelement path="sample.jar"/>
@@ -32,6 +27,6 @@
    </target>
 
   <target name="clean">
-    <delete dir="${classes}"/>
+    <delete dir="classes"/>
   </target>
 </project>
